// Copyright 2020 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package internal.prjmanager.internal;

option go_package = "go.chromium.org/luci/cv/internal/prjmanager/internal;internal";


// Event is a container for all kinds of events a project manager can receive.
message Event {
  oneof event {
    UpdateConfig update_config = 1;
    Poke poke = 2;
  }
}

message UpdateConfig {}
message Poke {}
